# python-project-preparation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
common/: __init__.py
my_package/: __main__.py
other_package/: __main__.py
